--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <style>
 
     </style>
-    <title>React App</title>
+    <title>SnappyDay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
